; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/amdgpu/extr_dce_v8_0.c_dce_v8_0_audio_enable.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/amdgpu/extr_dce_v8_0.c_dce_v8_0_audio_enable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.amdgpu_device = type { i32 }
%struct.amdgpu_audio_pin = type { i32 }

@ixAZALIA_F0_CODEC_PIN_CONTROL_HOT_PLUG_CONTROL = common dso_local global i32 0, align 4
@AZALIA_F0_CODEC_PIN_CONTROL_HOT_PLUG_CONTROL__AUDIO_ENABLED_MASK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.amdgpu_device*, %struct.amdgpu_audio_pin*, i32)* @dce_v8_0_audio_enable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dce_v8_0_audio_enable(%struct.amdgpu_device* %0, %struct.amdgpu_audio_pin* %1, i32 %2) #0 {
  %4 = alloca %struct.amdgpu_device*, align 8
  %5 = alloca %struct.amdgpu_audio_pin*, align 8
  %6 = alloca i32, align 4
  store %struct.amdgpu_device* %0, %struct.amdgpu_device** %4, align 8
  store %struct.amdgpu_audio_pin* %1, %struct.amdgpu_audio_pin** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load %struct.amdgpu_audio_pin*, %struct.amdgpu_audio_pin** %5, align 8
  %8 = icmp ne %struct.amdgpu_audio_pin* %7, null
  br i1 %8, label %10, label %9

9:                                                ; preds = %3
  br label %23

10:                                               ; preds = %3
  %11 = load %struct.amdgpu_audio_pin*, %struct.amdgpu_audio_pin** %5, align 8
  %12 = getelementptr inbounds %struct.amdgpu_audio_pin, %struct.amdgpu_audio_pin* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = load i32, i32* @ixAZALIA_F0_CODEC_PIN_CONTROL_HOT_PLUG_CONTROL, align 4
  %15 = load i32, i32* %6, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %19

17:                                               ; preds = %10
  %18 = load i32, i32* @AZALIA_F0_CODEC_PIN_CONTROL_HOT_PLUG_CONTROL__AUDIO_ENABLED_MASK, align 4
  br label %20

19:                                               ; preds = %10
  br label %20

20:                                               ; preds = %19, %17
  %21 = phi i32 [ %18, %17 ], [ 0, %19 ]
  %22 = call i32 @WREG32_AUDIO_ENDPT(i32 %13, i32 %14, i32 %21)
  br label %23

23:                                               ; preds = %20, %9
  ret void
}

declare dso_local i32 @WREG32_AUDIO_ENDPT(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
